# fetching_pubmed_paper

./: README.md  pubmed_results.json  pyproject.toml
fetching_pubmed_paper/: pubmed_fetcher.py
